17/9/23:
-Exposed raycasting to scripts
-Mouse input stuff added in scripts
-Fixed script filepaths not being preserved if not loaded correctly causing them to disconnect from entities
-Fixed deleteentity script crash where entities could be pushed into the deletion queue multiple times
-Fixed total elapsed time calculation
-Fixed material deletion crash where imgui would try to render the deleted preview image
-Fixed script reconnection after reload bug where all script components would be reconnected even if they didn't have it
-Fixed material preview crash caused by trying to render a material preview for a material that could have been deleted

16/9/23:
-Switched to vcpkg for managing physx

15/9/23:
-Data components
-Spotlight + pointlight shadow system overhaul, no shadow limit and functional shadow toggles
-Mesh manager now updates last to catch all transform events (was causing stuttery movement before)
-Fixed material window closing bug
-Spotlight direction vec now from transform

14/9/23:
-Intellisense improvements/fixes for scripts, entity/prefab data written to header file to be used by them
-Proper scene display panel added (not just imgui drawn over a fullscreen display)
-Scene display panel drag/drop with meshes/prefabs
-Further work on prefabs

12/9/23:
-Pause button for editor simulation mode
-Slightly improved entity node drag/drop + select controls
-More script stability
-Build fixes for CMake

11/9/23:
-Project file structure validation and repair system
-Script loading/execution stability improvements
-Cmake assimp include fix
-Fixed script reloading
-Overhaul of asset manager, full switch to binary asset serialization and code improvements
-Further general asset/project management improvements
-Editor cam rotation improvements (no more sticking at high/low y target values)

9/9/23:
-Mesh default material system removed - just considering meshes pure vertex data now
-Editor mesh asset management fixes and improvements

8/9/23: