@@ -35,7 +35,6 @@ namespace ORNG {
 	void MeshComponent::DispatchUpdateEvent() {
 		Events::ECS_Event<MeshComponent> e_event;
 		e_event.affected_components[0] = this;
-		e_event.affected_entities[0] = GetEntity();
 		e_event.event_type = Events::ECS_EventType::COMP_UPDATED;
 
 		Events::EventManager::DispatchEvent(e_event);
